# avid

./: .env.example  .gitignore  AViD.command  README.md  pyproject.toml
docs/: TDD.md
launchd/: com.user.aidictation.plist  com.user.avid.plist
models/: README.md
scripts/: download_model.sh  embed_logo.py  install_launchagent.sh  quantize_model.sh  reload.sh  run.sh  set_launcher_icon.py  uninstall_launchagent.sh
src/: __init__.py  audio.py  config.py  format_llm.py  hotkeys.py  inject.py  main.py  menubar.py  prompts.py  server.py  transcribe.py  utils.py
src/ui/: __init__.py  sounds.py  window.py
src/ui/web/: app.js  index.html  styles.css
